<resources>
    <string name="app_name">BlogPostApp</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="createaccount">createaccount</string>
    <string name="posttittle">Post Tittle</string>
    <string name="postdescription">Post Description</string>
    <string name="submittext">Submit Post</string>
    <string name="FirstName">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="createAct">Create Account</string>
</resources>
